--- a/web/src/enterprise/threads/detail/ThreadArea.scss
+++ b/web/src/enterprise/threads/detail/ThreadArea.scss
@@ -1,3 +1,4 @@
+@import './changes/ThreadChangesList';
 @import './overview/ThreadOverview';
 @import './inbox/ThreadInboxItemsList';
 @import './ThreadAreaNavbar';
