--- a/web/src/enterprise/threads/detail/ThreadArea.scss
+++ b/web/src/enterprise/threads/detail/ThreadArea.scss
@@ -19,6 +19,10 @@
             background-color: black !important;
         }
     }
+
+    .bg-purple {
+        background-color: $oc-violet-9;
+    }
 }
 
 .theme-light .thread-area {
