--- a/web/src/enterprise/threads/detail/ThreadArea.scss
+++ b/web/src/enterprise/threads/detail/ThreadArea.scss
@@ -20,6 +20,9 @@
         }
     }
 
+    .text-purple {
+        color: $oc-violet-7;
+    }
     .bg-purple {
         background-color: $oc-violet-9;
     }
